ProjetoBase/compilador.output
Terminais sem uso na gramática

    LABEL
    TYPE
    ARRAY
    OF
    PROCEDURE
    FUNCTION
    GOTO
    ELSE
    ABRE_COLCHETES
    FECHA_COLCHETES
    ABRE_CHAVES
    FECHA_CHAVES


Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 bloco: parte_declara_vars $@2 comando_composto

    5 $@3: ε

    6 parte_declara_vars: $@3 VAR declara_vars
    7                   | ε

    8 declara_vars: declara_vars declara_var
    9             | declara_var

   10 $@4: ε

   11 $@5: ε

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   13 tipo: TIPO

   14 lista_idents: lista_idents VIRGULA IDENT
   15             | IDENT

   16 lista_id_var: lista_id_var VIRGULA IDENT
   17             | IDENT

   18 comando_composto: T_BEGIN comandos T_END

   19 comandos: comando_sem_rotulo
   20         | comandos PONTO_E_VIRGULA comando_sem_rotulo

   21 comando_sem_rotulo: atribuicao
   22                   | comando_repetitivo
   23                   | comando_condicional
   24                   | ε

   25 atribuicao: variavel ATRIBUICAO expressao

   26 $@6: ε

   27 $@7: ε

   28 comando_repetitivo: WHILE $@6 expressao $@7 DO comando_sem_rotulo_ou_composto

   29 comando_sem_rotulo_ou_composto: comando_sem_rotulo
   30                               | comando_composto

   31 $@8: ε

   32 comando_condicional: IF expressao $@8 THEN comando_sem_rotulo_ou_composto

   33 expressao: expressao_simples
   34          | expressao_simples relacao expressao_simples

   35 relacao: IGUAL
   36        | DIFERENTE
   37        | MENOR
   38        | MENOR_IGUAL
   39        | MAIOR_IGUAL
   40        | MAIOR

   41 expressao_simples: expressao_simples mais_menos_or termo
   42                  | mais_menos_vazio termo

   43 mais_menos_vazio: MAIS
   44                 | MENOS
   45                 | ε

   46 mais_menos_or: MAIS
   47              | MENOS
   48              | OR

   49 termo: termo vezes_div_and fator
   50      | fator

   51 vezes_div_and: VEZES
   52              | DIV
   53              | AND

   54 fator: variavel
   55      | NUMERO
   56      | VALOR_BOOL
   57      | ABRE_PARENTESES expressao FECHA_PARENTESES
   58      | NOT fator

   59 variavel: IDENT


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    LABEL (259)
    TYPE (260)
    ARRAY (261)
    OF (262)
    VAR (263) 6
    PROCEDURE (264)
    FUNCTION (265)
    T_BEGIN (266) 18
    T_END (267) 18
    GOTO (268)
    IF (269) 32
    THEN (270) 32
    ELSE (271)
    WHILE (272) 28
    DO (273) 28
    OR (274) 48
    AND (275) 53
    NOT (276) 58
    DIV (277) 52
    ATRIBUICAO (278) 25
    PONTO_E_VIRGULA (279) 2 12 20
    DOIS_PONTOS (280) 12
    VIRGULA (281) 14 16
    PONTO (282) 2
    ABRE_PARENTESES (283) 2 57
    FECHA_PARENTESES (284) 2 57
    ABRE_COLCHETES (285)
    FECHA_COLCHETES (286)
    ABRE_CHAVES (287)
    FECHA_CHAVES (288)
    IDENT (289) 2 14 15 16 17 59
    MAIOR (290) 40
    MENOR (291) 37
    IGUAL (292) 35
    MAIS (293) 43 46
    MENOS (294) 44 47
    VEZES (295) 51
    NUMERO (296) 55
    DIFERENTE (297) 36
    MENOR_IGUAL (298) 38
    MAIOR_IGUAL (299) 39
    VALOR_BOOL (300) 56
    TIPO (301) 13


Não terminais com as regras onde eles aparecem

    $accept (47)
        à esquerda: 0
    programa (48)
        à esquerda: 2
        à direita: 0
    $@1 (49)
        à esquerda: 1
        à direita: 2
    bloco (50)
        à esquerda: 4
        à direita: 2
    $@2 (51)
        à esquerda: 3
        à direita: 4
    parte_declara_vars (52)
        à esquerda: 6 7
        à direita: 4
    $@3 (53)
        à esquerda: 5
        à direita: 6
    declara_vars (54)
        à esquerda: 8 9
        à direita: 6 8
    declara_var (55)
        à esquerda: 12
        à direita: 8 9
    $@4 (56)
        à esquerda: 10
        à direita: 12
    $@5 (57)
        à esquerda: 11
        à direita: 12
    tipo <int_val> (58)
        à esquerda: 13
        à direita: 12
    lista_idents (59)
        à esquerda: 14 15
        à direita: 2 14
    lista_id_var (60)
        à esquerda: 16 17
        à direita: 12 16
    comando_composto (61)
        à esquerda: 18
        à direita: 4 30
    comandos (62)
        à esquerda: 19 20
        à direita: 18 20
    comando_sem_rotulo (63)
        à esquerda: 21 22 23 24
        à direita: 19 20 29
    atribuicao (64)
        à esquerda: 25
        à direita: 21
    comando_repetitivo (65)
        à esquerda: 28
        à direita: 22
    $@6 (66)
        à esquerda: 26
        à direita: 28
    $@7 (67)
        à esquerda: 27
        à direita: 28
    comando_sem_rotulo_ou_composto (68)
        à esquerda: 29 30
        à direita: 28 32
    comando_condicional (69)
        à esquerda: 32
        à direita: 23
    $@8 (70)
        à esquerda: 31
        à direita: 32
    expressao <int_val> (71)
        à esquerda: 33 34
        à direita: 25 28 32 57
    relacao <str> (72)
        à esquerda: 35 36 37 38 39 40
        à direita: 34
    expressao_simples <int_val> (73)
        à esquerda: 41 42
        à direita: 33 34 41
    mais_menos_vazio <str> (74)
        à esquerda: 43 44 45
        à direita: 42
    mais_menos_or <str> (75)
        à esquerda: 46 47 48
        à direita: 41
    termo <int_val> (76)
        à esquerda: 49 50
        à direita: 41 42 49
    vezes_div_and <str> (77)
        à esquerda: 51 52 53
        à direita: 49
    fator <int_val> (78)
        à esquerda: 54 55 56 57 58
        à direita: 49 50 58
    variavel <simb> (79)
        à esquerda: 59
        à direita: 25 54


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


Estado 7

   15 lista_idents: IDENT •

    $padrão  reduzir usando a regra 15 (lista_idents)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   14 lista_idents: lista_idents • VIRGULA IDENT

    VIRGULA           deslocar, e ir ao estado 9
    FECHA_PARENTESES  deslocar, e ir ao estado 10


Estado 9

   14 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 11


Estado 10

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 12


Estado 11

   14 lista_idents: lista_idents VIRGULA IDENT •

    $padrão  reduzir usando a regra 14 (lista_idents)


Estado 12

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    T_BEGIN  reduzir usando a regra 7 (parte_declara_vars)
    $padrão  reduzir usando a regra 5 ($@3)

    bloco               ir ao estado 13
    parte_declara_vars  ir ao estado 14
    $@3                 ir ao estado 15


Estado 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 16


Estado 14

    4 bloco: parte_declara_vars • $@2 comando_composto

    $padrão  reduzir usando a regra 3 ($@2)

    $@2  ir ao estado 17


Estado 15

    6 parte_declara_vars: $@3 • VAR declara_vars

    VAR  deslocar, e ir ao estado 18


Estado 16

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 17

    4 bloco: parte_declara_vars $@2 • comando_composto

    T_BEGIN  deslocar, e ir ao estado 19

    comando_composto  ir ao estado 20


Estado 18

    6 parte_declara_vars: $@3 VAR • declara_vars

    $padrão  reduzir usando a regra 10 ($@4)

    declara_vars  ir ao estado 21
    declara_var   ir ao estado 22
    $@4           ir ao estado 23


Estado 19

   18 comando_composto: T_BEGIN • comandos T_END

    IF     deslocar, e ir ao estado 24
    WHILE  deslocar, e ir ao estado 25
    IDENT  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 24 (comando_sem_rotulo)

    comandos             ir ao estado 27
    comando_sem_rotulo   ir ao estado 28
    atribuicao           ir ao estado 29
    comando_repetitivo   ir ao estado 30
    comando_condicional  ir ao estado 31
    variavel             ir ao estado 32


Estado 20

    4 bloco: parte_declara_vars $@2 comando_composto •

    $padrão  reduzir usando a regra 4 (bloco)


Estado 21

    6 parte_declara_vars: $@3 VAR declara_vars •
    8 declara_vars: declara_vars • declara_var

    IDENT    reduzir usando a regra 10 ($@4)
    $padrão  reduzir usando a regra 6 (parte_declara_vars)

    declara_var  ir ao estado 33
    $@4          ir ao estado 23


Estado 22

    9 declara_vars: declara_var •

    $padrão  reduzir usando a regra 9 (declara_vars)


Estado 23

   12 declara_var: $@4 • lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 34

    lista_id_var  ir ao estado 35


Estado 24

   32 comando_condicional: IF • expressao $@8 THEN comando_sem_rotulo_ou_composto

    MAIS   deslocar, e ir ao estado 36
    MENOS  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 45 (mais_menos_vazio)

    expressao          ir ao estado 38
    expressao_simples  ir ao estado 39
    mais_menos_vazio   ir ao estado 40


Estado 25

   28 comando_repetitivo: WHILE • $@6 expressao $@7 DO comando_sem_rotulo_ou_composto

    $padrão  reduzir usando a regra 26 ($@6)

    $@6  ir ao estado 41


Estado 26

   59 variavel: IDENT •

    $padrão  reduzir usando a regra 59 (variavel)


Estado 27

   18 comando_composto: T_BEGIN comandos • T_END
   20 comandos: comandos • PONTO_E_VIRGULA comando_sem_rotulo

    T_END            deslocar, e ir ao estado 42
    PONTO_E_VIRGULA  deslocar, e ir ao estado 43


Estado 28

   19 comandos: comando_sem_rotulo •

    $padrão  reduzir usando a regra 19 (comandos)


Estado 29

   21 comando_sem_rotulo: atribuicao •

    $padrão  reduzir usando a regra 21 (comando_sem_rotulo)


Estado 30

   22 comando_sem_rotulo: comando_repetitivo •

    $padrão  reduzir usando a regra 22 (comando_sem_rotulo)


Estado 31

   23 comando_sem_rotulo: comando_condicional •

    $padrão  reduzir usando a regra 23 (comando_sem_rotulo)


Estado 32

   25 atribuicao: variavel • ATRIBUICAO expressao

    ATRIBUICAO  deslocar, e ir ao estado 44


Estado 33

    8 declara_vars: declara_vars declara_var •

    $padrão  reduzir usando a regra 8 (declara_vars)


Estado 34

   17 lista_id_var: IDENT •

    $padrão  reduzir usando a regra 17 (lista_id_var)


Estado 35

   12 declara_var: $@4 lista_id_var • DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   16 lista_id_var: lista_id_var • VIRGULA IDENT

    DOIS_PONTOS  deslocar, e ir ao estado 45
    VIRGULA      deslocar, e ir ao estado 46


Estado 36

   43 mais_menos_vazio: MAIS •

    $padrão  reduzir usando a regra 43 (mais_menos_vazio)


Estado 37

   44 mais_menos_vazio: MENOS •

    $padrão  reduzir usando a regra 44 (mais_menos_vazio)


Estado 38

   32 comando_condicional: IF expressao • $@8 THEN comando_sem_rotulo_ou_composto

    $padrão  reduzir usando a regra 31 ($@8)

    $@8  ir ao estado 47


Estado 39

   33 expressao: expressao_simples •
   34          | expressao_simples • relacao expressao_simples
   41 expressao_simples: expressao_simples • mais_menos_or termo

    OR           deslocar, e ir ao estado 48
    MAIOR        deslocar, e ir ao estado 49
    MENOR        deslocar, e ir ao estado 50
    IGUAL        deslocar, e ir ao estado 51
    MAIS         deslocar, e ir ao estado 52
    MENOS        deslocar, e ir ao estado 53
    DIFERENTE    deslocar, e ir ao estado 54
    MENOR_IGUAL  deslocar, e ir ao estado 55
    MAIOR_IGUAL  deslocar, e ir ao estado 56

    $padrão  reduzir usando a regra 33 (expressao)

    relacao        ir ao estado 57
    mais_menos_or  ir ao estado 58


Estado 40

   42 expressao_simples: mais_menos_vazio • termo

    NOT              deslocar, e ir ao estado 59
    ABRE_PARENTESES  deslocar, e ir ao estado 60
    IDENT            deslocar, e ir ao estado 26
    NUMERO           deslocar, e ir ao estado 61
    VALOR_BOOL       deslocar, e ir ao estado 62

    termo     ir ao estado 63
    fator     ir ao estado 64
    variavel  ir ao estado 65


Estado 41

   28 comando_repetitivo: WHILE $@6 • expressao $@7 DO comando_sem_rotulo_ou_composto

    MAIS   deslocar, e ir ao estado 36
    MENOS  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 45 (mais_menos_vazio)

    expressao          ir ao estado 66
    expressao_simples  ir ao estado 39
    mais_menos_vazio   ir ao estado 40


Estado 42

   18 comando_composto: T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 18 (comando_composto)


Estado 43

   20 comandos: comandos PONTO_E_VIRGULA • comando_sem_rotulo

    IF     deslocar, e ir ao estado 24
    WHILE  deslocar, e ir ao estado 25
    IDENT  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 24 (comando_sem_rotulo)

    comando_sem_rotulo   ir ao estado 67
    atribuicao           ir ao estado 29
    comando_repetitivo   ir ao estado 30
    comando_condicional  ir ao estado 31
    variavel             ir ao estado 32


Estado 44

   25 atribuicao: variavel ATRIBUICAO • expressao

    MAIS   deslocar, e ir ao estado 36
    MENOS  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 45 (mais_menos_vazio)

    expressao          ir ao estado 68
    expressao_simples  ir ao estado 39
    mais_menos_vazio   ir ao estado 40


Estado 45

   12 declara_var: $@4 lista_id_var DOIS_PONTOS • tipo $@5 PONTO_E_VIRGULA

    TIPO  deslocar, e ir ao estado 69

    tipo  ir ao estado 70


Estado 46

   16 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 71


Estado 47

   32 comando_condicional: IF expressao $@8 • THEN comando_sem_rotulo_ou_composto

    THEN  deslocar, e ir ao estado 72


Estado 48

   48 mais_menos_or: OR •

    $padrão  reduzir usando a regra 48 (mais_menos_or)


Estado 49

   40 relacao: MAIOR •

    $padrão  reduzir usando a regra 40 (relacao)


Estado 50

   37 relacao: MENOR •

    $padrão  reduzir usando a regra 37 (relacao)


Estado 51

   35 relacao: IGUAL •

    $padrão  reduzir usando a regra 35 (relacao)


Estado 52

   46 mais_menos_or: MAIS •

    $padrão  reduzir usando a regra 46 (mais_menos_or)


Estado 53

   47 mais_menos_or: MENOS •

    $padrão  reduzir usando a regra 47 (mais_menos_or)


Estado 54

   36 relacao: DIFERENTE •

    $padrão  reduzir usando a regra 36 (relacao)


Estado 55

   38 relacao: MENOR_IGUAL •

    $padrão  reduzir usando a regra 38 (relacao)


Estado 56

   39 relacao: MAIOR_IGUAL •

    $padrão  reduzir usando a regra 39 (relacao)


Estado 57

   34 expressao: expressao_simples relacao • expressao_simples

    MAIS   deslocar, e ir ao estado 36
    MENOS  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 45 (mais_menos_vazio)

    expressao_simples  ir ao estado 73
    mais_menos_vazio   ir ao estado 40


Estado 58

   41 expressao_simples: expressao_simples mais_menos_or • termo

    NOT              deslocar, e ir ao estado 59
    ABRE_PARENTESES  deslocar, e ir ao estado 60
    IDENT            deslocar, e ir ao estado 26
    NUMERO           deslocar, e ir ao estado 61
    VALOR_BOOL       deslocar, e ir ao estado 62

    termo     ir ao estado 74
    fator     ir ao estado 64
    variavel  ir ao estado 65


Estado 59

   58 fator: NOT • fator

    NOT              deslocar, e ir ao estado 59
    ABRE_PARENTESES  deslocar, e ir ao estado 60
    IDENT            deslocar, e ir ao estado 26
    NUMERO           deslocar, e ir ao estado 61
    VALOR_BOOL       deslocar, e ir ao estado 62

    fator     ir ao estado 75
    variavel  ir ao estado 65


Estado 60

   57 fator: ABRE_PARENTESES • expressao FECHA_PARENTESES

    MAIS   deslocar, e ir ao estado 36
    MENOS  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 45 (mais_menos_vazio)

    expressao          ir ao estado 76
    expressao_simples  ir ao estado 39
    mais_menos_vazio   ir ao estado 40


Estado 61

   55 fator: NUMERO •

    $padrão  reduzir usando a regra 55 (fator)


Estado 62

   56 fator: VALOR_BOOL •

    $padrão  reduzir usando a regra 56 (fator)


Estado 63

   42 expressao_simples: mais_menos_vazio termo •
   49 termo: termo • vezes_div_and fator

    AND    deslocar, e ir ao estado 77
    DIV    deslocar, e ir ao estado 78
    VEZES  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 42 (expressao_simples)

    vezes_div_and  ir ao estado 80


Estado 64

   50 termo: fator •

    $padrão  reduzir usando a regra 50 (termo)


Estado 65

   54 fator: variavel •

    $padrão  reduzir usando a regra 54 (fator)


Estado 66

   28 comando_repetitivo: WHILE $@6 expressao • $@7 DO comando_sem_rotulo_ou_composto

    $padrão  reduzir usando a regra 27 ($@7)

    $@7  ir ao estado 81


Estado 67

   20 comandos: comandos PONTO_E_VIRGULA comando_sem_rotulo •

    $padrão  reduzir usando a regra 20 (comandos)


Estado 68

   25 atribuicao: variavel ATRIBUICAO expressao •

    $padrão  reduzir usando a regra 25 (atribuicao)


Estado 69

   13 tipo: TIPO •

    $padrão  reduzir usando a regra 13 (tipo)


Estado 70

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo • $@5 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 11 ($@5)

    $@5  ir ao estado 82


Estado 71

   16 lista_id_var: lista_id_var VIRGULA IDENT •

    $padrão  reduzir usando a regra 16 (lista_id_var)


Estado 72

   32 comando_condicional: IF expressao $@8 THEN • comando_sem_rotulo_ou_composto

    T_BEGIN  deslocar, e ir ao estado 19
    IF       deslocar, e ir ao estado 24
    WHILE    deslocar, e ir ao estado 25
    IDENT    deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 24 (comando_sem_rotulo)

    comando_composto                ir ao estado 83
    comando_sem_rotulo              ir ao estado 84
    atribuicao                      ir ao estado 29
    comando_repetitivo              ir ao estado 30
    comando_sem_rotulo_ou_composto  ir ao estado 85
    comando_condicional             ir ao estado 31
    variavel                        ir ao estado 32


Estado 73

   34 expressao: expressao_simples relacao expressao_simples •
   41 expressao_simples: expressao_simples • mais_menos_or termo

    OR     deslocar, e ir ao estado 48
    MAIS   deslocar, e ir ao estado 52
    MENOS  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 34 (expressao)

    mais_menos_or  ir ao estado 58


Estado 74

   41 expressao_simples: expressao_simples mais_menos_or termo •
   49 termo: termo • vezes_div_and fator

    AND    deslocar, e ir ao estado 77
    DIV    deslocar, e ir ao estado 78
    VEZES  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 41 (expressao_simples)

    vezes_div_and  ir ao estado 80


Estado 75

   58 fator: NOT fator •

    $padrão  reduzir usando a regra 58 (fator)


Estado 76

   57 fator: ABRE_PARENTESES expressao • FECHA_PARENTESES

    FECHA_PARENTESES  deslocar, e ir ao estado 86


Estado 77

   53 vezes_div_and: AND •

    $padrão  reduzir usando a regra 53 (vezes_div_and)


Estado 78

   52 vezes_div_and: DIV •

    $padrão  reduzir usando a regra 52 (vezes_div_and)


Estado 79

   51 vezes_div_and: VEZES •

    $padrão  reduzir usando a regra 51 (vezes_div_and)


Estado 80

   49 termo: termo vezes_div_and • fator

    NOT              deslocar, e ir ao estado 59
    ABRE_PARENTESES  deslocar, e ir ao estado 60
    IDENT            deslocar, e ir ao estado 26
    NUMERO           deslocar, e ir ao estado 61
    VALOR_BOOL       deslocar, e ir ao estado 62

    fator     ir ao estado 87
    variavel  ir ao estado 65


Estado 81

   28 comando_repetitivo: WHILE $@6 expressao $@7 • DO comando_sem_rotulo_ou_composto

    DO  deslocar, e ir ao estado 88


Estado 82

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 89


Estado 83

   30 comando_sem_rotulo_ou_composto: comando_composto •

    $padrão  reduzir usando a regra 30 (comando_sem_rotulo_ou_composto)


Estado 84

   29 comando_sem_rotulo_ou_composto: comando_sem_rotulo •

    $padrão  reduzir usando a regra 29 (comando_sem_rotulo_ou_composto)


Estado 85

   32 comando_condicional: IF expressao $@8 THEN comando_sem_rotulo_ou_composto •

    $padrão  reduzir usando a regra 32 (comando_condicional)


Estado 86

   57 fator: ABRE_PARENTESES expressao FECHA_PARENTESES •

    $padrão  reduzir usando a regra 57 (fator)


Estado 87

   49 termo: termo vezes_div_and fator •

    $padrão  reduzir usando a regra 49 (termo)


Estado 88

   28 comando_repetitivo: WHILE $@6 expressao $@7 DO • comando_sem_rotulo_ou_composto

    T_BEGIN  deslocar, e ir ao estado 19
    IF       deslocar, e ir ao estado 24
    WHILE    deslocar, e ir ao estado 25
    IDENT    deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 24 (comando_sem_rotulo)

    comando_composto                ir ao estado 83
    comando_sem_rotulo              ir ao estado 84
    atribuicao                      ir ao estado 29
    comando_repetitivo              ir ao estado 30
    comando_sem_rotulo_ou_composto  ir ao estado 90
    comando_condicional             ir ao estado 31
    variavel                        ir ao estado 32


Estado 89

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 12 (declara_var)


Estado 90

   28 comando_repetitivo: WHILE $@6 expressao $@7 DO comando_sem_rotulo_ou_composto •

    $padrão  reduzir usando a regra 28 (comando_repetitivo)
